--- a/link.html
+++ b/link.html
@@ -4,4 +4,6 @@
     <meta property="al:android:app_name" content="OwlTree">
     <meta property="og:title" content="Test" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="http://i1.daumcdn.net/cfile136/image/2211913ED885C6CCB69519" />
+    <meta property="og:description" content="설명" />
 </head>
