--- a/link.html
+++ b/link.html
@@ -1,12 +1,12 @@
 <head>
+    <meta property="fb:app_id" content="1402642393309773" />
     <meta property="al:android:url" content="fb1402642393309773://story/1234">
     <meta property="al:android:package" content="us.owltree">
     <meta property="al:android:app_name" content="OwlTree">
     <meta property="og:title" content="Test" />
-    <meta property="og:type" content="website" />
+    <meta property="og:type" content="photo" />
     <meta property="og:image" content="https://images-na.ssl-images-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_UX182_CR0,0,182,268_AL_.jpg" />
-    <meta property="og:description" content="설명" />
-    <meta property="og:url" content="https://play.google.com/store/apps/details?id=us.owltree" />
-    <meta property="fb:app_id" content="1402642393309773" />
+    <meta property="og:description" content="desc" />
+    <meta property="og:url" content="" />
     
 </head>
