--- a/link.html
+++ b/link.html
@@ -4,7 +4,7 @@
     <meta property="al:android:package" content="us.owltree">
     <meta property="al:android:app_name" content="OwlTree">
     <meta property="og:title" content="Test" />
-    <meta property="og:type" content="photo" />
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="https://images-na.ssl-images-amazon.com/images/M/MV5BMTMxNTMwODM0NF5BMl5BanBnXkFtZTcwODAyMTk2Mw@@._V1_UX182_CR0,0,182,268_AL_.jpg" />
     <meta property="og:description" content="desc" />
     <meta property="og:url" content="" />
