--- a/link.html
+++ b/link.html
@@ -1,3 +1,6 @@
+<html xmlns="http://www.w3.org/1999/xhtml"
+xmlns:og="http://ogp.me/ns#"
+xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
     <meta property="fb:app_id" content="1402642393309773" />
     <meta property="al:android:url" content="fb1402642393309773://story/1234">
@@ -12,3 +15,4 @@
     <meta property="og:url" content="" />
     
 </head>
+</html>
