--- a/link.html
+++ b/link.html
@@ -2,7 +2,7 @@
 xmlns:og="http://ogp.me/ns#"
 xmlns:fb="http://www.facebook.com/2008/fbml">
 <head>
-    <meta property="fb:app_id" content="1402642393309773" />
+    <meta property="fb:app_id" content=1402642393309773 />
     <meta property="al:android:url" content="fb1402642393309773://story/1234">
     <meta property="al:android:package" content="us.owltree">
     <meta property="al:android:app_name" content="OwlTree">
